# llm-abm-wom-diffusion

./: .env.example  .gitignore  FINAL_REPORT.md  LICENSE  PROJECT_COMPLETION_REPORT.md  README.md  check_stats.py  main.py  pyproject.toml
analysis/: 01_extract_metrics.py  02_statistical_tests.py  03_visualizations.py  04_descriptive_stats.py  05_network_topology_vis.py  06_manipulation_check.py  07_micro_mechanism_vis.py  08_reasoning_samples.py  09_anova_analysis.py  10_anova_speed.py  README.md  plot_config.py
analysis/tables/: table1_descriptive_statistics.csv  table1_descriptive_statistics.tex  table2_reasoning_samples.tex  table2_reasoning_samples_full.csv  table3_anova.tex  table4_anova_speed.tex
data/processed/: .gitkeep
data/raw/: .gitkeep
data/results/: .gitkeep
data/wom/: wom_corpus.csv  wom_corpus_prompt.md
docs/: AI_CODING_GUIDE.md  ARCHITECTURE.md  CODEMAP.md  ENV_SETUP.md  PROJECT_PROGRESS.md
experiments/configs/: group_a.yaml  group_b.yaml  group_c.yaml  group_d.yaml
go/: go.mod  go.sum
go/cmd/: main.go
go/internal/agents/: agent.go
go/internal/tools/: diffusion_tool.go
notebooks/: 00_eda_scratchpad.ipynb
python/: requirements.txt  run_experiment.py  run_preflight.py
python/agents/: __init__.py  agent.py
python/config/: settings.py
python/llm/: __init__.py  decision_client.py
python/models/: __init__.py  model.py
python/networks/: __init__.py  generator.py
scripts/: run_batch.sh  run_experiment.sh  run_pilot.sh
