[project]
name = "thesis-diffusion-simulation"
version = "0.1.0"
description = "LLM-Agent-Based New Product Diffusion Simulation: Network Structure × WOM Semantic Interaction Effect"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mesa>=3.3.1",
    "networkx>=3.6.1",
    "numpy>=2.4.2",
    "pandas>=3.0.1",
    "matplotlib>=3.10.8",
    "seaborn>=0.13.2",
    "scipy>=1.17.1",
    "tqdm>=4.67.3",
    "pyyaml>=6.0.3",
    "rich>=14.3.3",
    "loguru>=0.7.3",
    "pytest>=9.0.2",
]

[project.optional-dependencies]
dev = [
    "pytest-cov>=5.0.0",
    "black>=24.0.0",
    "ruff>=0.9.0",
    "mypy>=1.15.0",
]
llm = [
    "openai>=1.60.0",
    "dashscope>=1.22.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "D", "UP"]
ignore = ["D100", "D104"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.black]
line-length = 100
target-version = ["py311"]
